--- a/login.html
+++ b/login.html
@@ -19,7 +19,7 @@
 <body>
     <div class="row">
     <div class="col-md-3">
-        <h1>registration form </h1>
+        <h1>Registration form </h1>
     </div>
 <div class="col-md-6 bg-primary my-5">
   <center>  <h1 style="color: red;"> login form</h1> </center>  
